--- a/eIVOGo/Views/Account/ScriptHelper/Common.cshtml
+++ b/eIVOGo/Views/Account/ScriptHelper/Common.cshtml
@@ -45,7 +45,7 @@
             }
 
             showLoading();
-            $.post('@(Url.Action(_viewModel.QueryAction ?? "Inquire","Account",new { resultAction = ViewBag.ResultAction }))', $formData, function (data) {
+            $.post('@Html.Raw(Url.Action(_viewModel.QueryAction ?? "Inquire","Account",new { resultAction = ViewBag.ResultAction }))', $formData, function (data) {
                 hideLoading();
                 if (data) {
                     if (onPaging) {
@@ -70,7 +70,7 @@
                 $postForm.remove();
             }
 
-            $('<form method="post">').load('@(Url.Action("EditItem","UserProfile",new { SellerID = _viewModel.SellerID, DefaultRoleID = _viewModel.RoleID }))', { 'uid': uid }, function (evt) {
+            $('<form method="post">').load('@Html.Raw(Url.Action("EditItem","UserProfile",new { SellerID = _viewModel.SellerID, DefaultRoleID = _viewModel.RoleID }))', { 'uid': uid }, function (evt) {
                 $postForm = $(this);
                 $global.actionDone = function () {
                     $postForm.dialog('close');
@@ -113,7 +113,7 @@
         };
 
         window.uiAccountQuery.dataItem = function ($tr, value) {
-            $.post('@(Url.Action("DataItem","Account"))', 'id=' + value, function (data) {
+            $.post('@Html.Raw(Url.Action("DataItem","Account"))', 'id=' + value, function (data) {
                 if (data) {
                     var $data = $(data);
                     if ($data.is('tr')) {
@@ -128,7 +128,7 @@
         };
 
         window.uiAccountQuery.sendConfirmation = function (value) {
-            $.post('@(Url.Action("SendConfirmation","Account"))', 'id=' + value, function (data) {
+            $.post('@Html.Raw(Url.Action("SendConfirmation","Account"))', 'id=' + value, function (data) {
                 if (data) {
                     var $data = $(data);
                     $('body').append($data);
@@ -141,7 +141,7 @@
             if (confirm('確認啟用此帳號?')) {
                 var event = event || window.event;
                 var $tr = $(event.target).closest('tr');
-                $.post('@(Url.Action("Activate","Account"))', { id: value }, function (data) {
+                $.post('@Html.Raw(Url.Action("Activate","Account"))', { id: value }, function (data) {
                     if (data) {
                         var $data = $(data);
                         if ($data.is('tr')) {
@@ -161,7 +161,7 @@
             if (confirm('確認停用此帳號?')) {
                 var event = event || window.event;
                 var $tr = $(event.target).closest('tr');
-                $.post('@(Url.Action("Deactivate","Account"))', { id: value }, function (data) {
+                $.post('@Html.Raw(Url.Action("Deactivate","Account"))', { id: value }, function (data) {
                     if (data) {
                         var $data = $(data);
                         if ($data.is('tr')) {
@@ -181,7 +181,7 @@
             if (confirm('確認刪除此帳號?')) {
                 var event = event || window.event;
                 var $tr = $(event.target).closest('tr');
-                $.post('@(Url.Action("DeleteItem","Account"))', { id: value }, function (data) {
+                $.post('@Html.Raw(Url.Action("DeleteItem","Account"))', { id: value }, function (data) {
                     if (data.result) {
                         alert('資料已刪除!!')
                         $tr.remove();
