--- a/eIVOGo/Views/AllowanceProcess/Module/InvokeCommitAction.cshtml
+++ b/eIVOGo/Views/AllowanceProcess/Module/InvokeCommitAction.cshtml
@@ -29,7 +29,7 @@
         var $formData = $('input[name="chkItem"]:checked').serializeObject();
 
         showLoading();
-        $.post('@(Url.Action(_viewModel.CommitAction, "AllowanceProcess"))', $formData, function (data) {
+        $.post('@Html.Raw(Url.Action(_viewModel.CommitAction, "AllowanceProcess"))', $formData, function (data) {
             hideLoading();
             if ($.isPlainObject(data)) {
                 alert(data.message);
