--- a/eIVOGo/Views/Forms/B2BInvoice.cshtml
+++ b/eIVOGo/Views/Forms/B2BInvoice.cshtml
@@ -39,11 +39,11 @@
                 </th>
                 <td class="tdleft">
                     <input class="form-control" name="BuyerReceiptNo" type="text" onchange="loadCounterpart(this.value);" />
-                    <input type="checkbox" name="Counterpart" value="@(true)" />設為相對營業人
+                    <input type="checkbox" name="Counterpart" value="@($"{true}")" />設為相對營業人
                     <script>
                         function loadCounterpart(term) {
                             showLoading();
-                            $.post('@(Url.Action("GetCounterpart", "Home"))', { 'term': term }, function (data) {
+                            $.post('@Html.Raw(Url.Action("GetCounterpart", "Home"))', { 'term': term }, function (data) {
                                 hideLoading();
                                 if ($.isPlainObject(data) && data) {
                                     $('input[name="BuyerReceiptNo"]').val(data.ReceiptNo);
@@ -166,6 +166,7 @@
                         <option value="1">應稅</option>
                         <option value="2">零稅率</option>
                         <option value="3">免稅</option>
+                        <option value="4">特種稅率</option>
                     </select>
                 </td>
                 <th nowrap="nowrap" width="150">
@@ -226,7 +227,7 @@
                 </tr>
             </thead>
             <tbody>
-                @{ Html.RenderPartial("~/Views/InvoiceBusiness/InvoiceProduct/AddItem.ascx");}
+                @{ Html.RenderPartial("~/Views/InvoiceBusiness/InvoiceProduct/AddItem.cshtml");}
 
             </tbody>
         </table>
@@ -244,6 +245,10 @@
         </tbody>
     </table>
     <input type="hidden" name="Remark" />
+    @{ 
+        ViewBag.DialogID = "searchDialog";
+        Html.RenderPartial("~/Views/ProductCatalog/Module/ProductQuickSearch.cshtml");
+    }
 </form>
 <iframe name="commit" width="0" height="0" src="about:blank"></iframe>
 <script>
@@ -259,7 +264,7 @@
                     var prnWin = window.open('', '_preview', 'toolbar=no,location=no,status=no,menubar=no,scrollbars=auto,resizable=yes,alwaysRaised,dependent,titlebar=no,width=320,height=600');
                     prnWin.name = '_preview';
                     $form[0].target = '_preview';
-                    $form.prop('action', '@(Url.Action("PreviewInvoice","InvoiceBusiness"))').submit();
+                    $form.prop('action', '@Html.Raw(Url.Action("PreviewInvoice","InvoiceBusiness"))').submit();
                 }
             },*@
             commit: function (forPreview) {
@@ -269,9 +274,9 @@
                     var $formData = $form.serializeObject();
                     $formData.ForPreview = forPreview;
 
-                    @*$form.prop('target', 'commit').prop('action', '@(Url.Action("CommitA0401","InvoiceBusiness",new { _viewModel.InvoiceProcessType }))').submit();*@
+                    @*$form.prop('target', 'commit').prop('action', '@Html.Raw(Url.Action("CommitA0401","InvoiceBusiness",new { _viewModel.InvoiceProcessType }))').submit();*@
                     showLoading();
-                    $.post('@(Url.Action(_viewModel.InvoiceProcessType==Naming.InvoiceProcessType.A0401
+                    $.post('@Html.Raw(Url.Action(_viewModel.InvoiceProcessType==Naming.InvoiceProcessType.A0401
                                 ? "CommitA0401"
                                 : "CommitA0101", "InvoiceBusiness", new { _viewModel.InvoiceProcessType }))', $formData, function (data) {
                         hideLoading();
@@ -362,7 +367,24 @@
                     var $tr = $(event.target).parents('tr');
                     $tr.remove();
                 }
-            }
+            },
+            quickSearch: function (element) {
+                var event = event || window.event;
+                var $input = $(element);
+                $global.searchDone = function (item) {
+                    $input.val(item.ProductName);
+                    var $tr = $input.closest('tr');
+                    $tr.find('[name="UnitCost"]').val(item.SalePrice);
+                    $tr.find('[name="ItemRemark"]').val(item.Remark);
+                };
+                $('#searchDialog').dialog({
+                    width: 240,
+                    close: function (event, ui) {
+                        $input.focus();
+                    },
+                });
+            },
+
         };
     });
 </script>
