--- a/eIVOGo/Views/Handling/MailTracking/TableList.cshtml
+++ b/eIVOGo/Views/Handling/MailTracking/TableList.cshtml
@@ -45,6 +45,7 @@
                 <td colspan="8" class="Bargain_btn">
                     <button type="button" onclick="uiHandling.inquireTracking();">存檔</button>&nbsp;
                     <button type="button" onclick="uiHandling.download();">下載</button>
+                    <button type="button" onclick="uiHandling.zipAll();">列印資料下載(ZIP)</button>
                 </td>
             </tr>
         </tfoot>
