--- a/eIVOGo/Views/Organization/Module/EditItem.cshtml
+++ b/eIVOGo/Views/Organization/Module/EditItem.cshtml
@@ -55,7 +55,7 @@
         $global.commitOrganization = function () {
             $form = $('#editItem');
             showLoading();
-            $.post('@(Url.Action("CommitItem","Organization",new { _viewModel.KeyID }))', $form.serializeObject(), function (data) {
+            $.post('@Html.Raw(Url.Action("CommitItem","Organization",new { _viewModel.KeyID }))', $form.serializeObject(), function (data) {
                 hideLoading();
                 if ($.isPlainObject(data)) {
                     if (data.result) {
