--- a/eIVOGo/Views/Common/Module/QueryPaging.cshtml
+++ b/eIVOGo/Views/Common/Module/QueryPaging.cshtml
@@ -30,7 +30,7 @@
 }
 @{
     var recordCount = _viewModel.RecordCount;
-    if (recordCount > 0)
+    if (recordCount > 0 || ViewBag.CreateNew != null)
     {
         <script>
             $inquiryAgent.doPage = function (data) {
@@ -44,6 +44,9 @@
                 Html.RenderPartial(_viewModel.ResultView, _model);
             }
         </div>
+    }
+    if (recordCount > 0)
+    {
         <nav aria-label="Page navigation">
             <ul class="pagination" id="@(_paginationID)"></ul>
         </nav>
