--- a/eIVOGo/Views/DataView/Module/C0401_CBE.cshtml
+++ b/eIVOGo/Views/DataView/Module/C0401_CBE.cshtml
@@ -71,12 +71,12 @@
                             <div class="code1">
                                 @{ String data = $"{_model.InvoiceDate.Value.Year - 1911:000}{_model.InvoiceDate.Value.Month:00}{_model.TrackCode}{_model.No}{_model.RandomNo}";}
 
-                                <img id="barcode" alt="" width="160" height="22" src="@(data.GetBarcode39ImageSrc())" />
+                                @*<img id="barcode" alt="" width="160" height="22" src="@(data.GetBarcode39ImageSrc())" />*@
                                 @*<img id="barcode" alt="" width="160" height="22" src="@(String.Format("{0}{1}?{2}", Uxnet.Web.Properties.Settings.Default.HostUrl, VirtualPathUtility.ToAbsolute("~/Published/GetBarCode39.ashx"), data))" />*@
                             </div>
                             <div class="code2">
-                                <img id="qrcode1" alt="" width="80" height="80" src="@(_model.GetLeftQRCodeImageSrc())" />
-                                <img id="qrcode2" alt="" width="80" height="80" src="@("**".CreateQRCodeImageSrc(width:180,height:180,qrVersion:10))" />
+                                @*<img id="qrcode1" alt="" width="80" height="80" src="@(_model.GetLeftQRCodeImageSrc())" />
+                                <img id="qrcode2" alt="" width="80" height="80" src="@("**".CreateQRCodeImageSrc(width:180,height:180,qrVersion:10))" />*@
                                 @*<img id="qrcode1" alt="" width="80" height="80" src="@(String.Format("{0}{1}?invoiceID={2}", Uxnet.Web.Properties.Settings.Default.HostUrl, VirtualPathUtility.ToAbsolute("~/DataView/GetLeftQRCode"), _model.InvoiceID))" />
                                     <img id="qrcode2" alt="" width="80" height="80" src="@(String.Format("{0}{1}?invoiceID={2}", Uxnet.Web.Properties.Settings.Default.HostUrl, VirtualPathUtility.ToAbsolute("~/DataView/GetRightQRCode"), _model.InvoiceID))" />*@
                             </div>
