--- a/eIVOGo/Views/InvoiceBusiness/InvoiceProduct/additem.cshtml
+++ b/eIVOGo/Views/InvoiceBusiness/InvoiceProduct/additem.cshtml
@@ -1,112 +1,44 @@
-
 @using System.IO
 @using System.Linq.Expressions
 
+@using Business.Helper
+@using DataAccessLayer.basis
+@using eIVOGo.Helper
+@using eIVOGo.Models
+@using eIVOGo.Controllers
 @using Model.DataEntity
+@using Model.Helper
 @using Model.Locale
-@using Model.DataEntity
+@using Model.Security.MembershipManagement
+@using Model.Models.ViewModel
+@using Utility
+@using Uxnet.Web.WebUI
+@using Newtonsoft.Json
+
+@{
+    ModelStateDictionary _modelState;
+    GenericManager<EIVOEntityDataContext> models;
+
+    models = ViewContext.Controller.DataSource();
+    UserProfileMember _profile = Context.GetUser();
+    _modelState = (ModelStateDictionary)ViewBag.ModelState;
+
+    IQueryable<ProductCatalog> items = models.DataContext.FilterProductCatalogByRole(_profile, models.GetTable<ProductCatalog>());
+
+}
 
 <tr>
     <td><input class="form-control" name="ItemNo" type="text" /></td>
-    <td><input class="form-control" name="Brief" required type="text" placeholder="請輸入品名!!" /></td>
+    <td>
+        <input class="form-control" name="Brief" onclick="@(items.Count()>0 ? "uiInvoice.quickSearch(this);" : null)" required type="text" placeholder="請輸入品名!!" />
+    </td>
     <td><input class="form-control" name="Piece" type="number" required min="1" step="1" value="1" placeholder="請輸入件數!!" /></td>
     <td><input class="form-control" name="UnitCost" type="number" required min="1" step="1" value="1" placeholder="請輸入單價!!" /></td>
     <td><input class="form-control" name="CostAmount" type="number" /></td>
     <td><input class="form-control" name="ItemRemark" type="text" /></td>
     <td>
         <button type="button" class="btn" onclick="uiInvoice.addRow();">新增</button>
-        <script>
-
-@*function deletePOS(value) {
-                if (confirm('確定刪除此筆資料?')) {
-                    var event = event || window.event;
-                    var $tr = $(event.target).parents('tr');
-                    $.post('@(Url.Action("DeletePOS", new { id = _model.CompanyID }))', { 'deviceID': value }, function (data) {
-                        if (data.result) {
-                            alert('資料已刪除!!')
-                            $tr.remove();
-                        } else {
-                            alert(data.message);
-                        }
-                    });
-                }
-            }
-            function commitPOS(value) {
-                var event = event || window.event;
-                var $tr = $(event.target).parents('tr');
-                $.post('@(Url.Action("CommitPOS", new { id = _model.CompanyID }))', 'deviceID=' + value + '&' + $.param($tr.find('input,select,textarea')), function (data) {
-                    if (data) {
-                        var $data = $(data);
-                        if ($data.is('tr')) {
-                            $tr.before($data);
-                            if (value) {
-                                alert('資料已更新!!');
-                                $tr.remove();
-                            }
-                        } else {
-                            $('body').append($data);
-                            $data.remove();
-                        }
-                    }
-                });
-            }
-
-            function editPOS(value) {
-                var event = event || window.event;
-                var $tr = $(event.target).parents('tr');
-                $.post('@(Url.Action("EditPOS", new { id = _model.CompanyID }))', 'deviceID=' + value , function (data) {
-                    if (data) {
-                        var $data = $(data);
-                        if ($data.is('tr')) {
-                            $tr.before($data);
-                            $tr.remove();
-                        } else {
-                            $('body').append($data);
-                            $data.remove();
-                        }
-                    }
-                });
-            }
-
-            function showPOS(value) {
-                var event = event || window.event;
-                var $tr = $(event.target).parents('tr');
-                $.post('@(Url.Action("DataItem", new { id = _model.CompanyID }))', 'deviceID=' + value , function (data) {
-                    if (data) {
-                        var $data = $(data);
-                        if ($data.is('tr')) {
-                            $tr.before($data);
-                            $tr.remove();
-                        } else {
-                            $('body').append($data);
-                            $data.remove();
-                        }
-                    }
-                });
-            }
-
-            function generateCode() {
-                var event = event || window.event;
-                var $tr = $(event.target).parents('tr');
-                $.post('@(Url.Action("GenerateGUID"))' , function (data) {
-                    if (data) {
-                        $tr.find('input').val(data);
-                    }
-                });
-            }*@
-        </script>
     </td>
 </tr>
 
 
-<script runat="server">
-
-    Organization _model;
-
-    protected override void OnInit(EventArgs e)
-    {
-        base.OnInit(e);
-        _model = (Organization)this.Model;
-    }
-
-</script>
