--- a/eIVOGo/Views/Organization/Module/ItemForm.cshtml
+++ b/eIVOGo/Views/Organization/Module/ItemForm.cshtml
@@ -145,7 +145,7 @@
                         設定使用發票列印
                     </th>
                     <td>
-                        <input type="checkbox" value="@(true)" name="SetToPrintInvoice" @(_viewModel.SetToPrintInvoice == true ? "checked" : null) />設定使用發票列印
+                        <input type="checkbox" value="@($"{true}")" name="SetToPrintInvoice" @(_viewModel.SetToPrintInvoice == true ? "checked" : null) />設定使用發票列印
                     </td>
                     <th>
                         發票列印樣式<br />
@@ -169,7 +169,7 @@
                         自動核准列印
                     </th>
                     <td>
-                        <input type="checkbox" value="@(true)" name="EntrustToPrint" @(_viewModel.EntrustToPrint == true ? "checked" : null) />B2B發票買受人可重複列印
+                        <input type="checkbox" value="@($"{true}")" name="EntrustToPrint" @(_viewModel.EntrustToPrint == true ? "checked" : null) />B2B發票買受人可重複列印
                     </td>
                 </tr>
                 <tr>
@@ -177,13 +177,13 @@
                         設定傳送發票對應資料
                     </th>
                     <td>
-                        <input type="checkbox" value="@(true)" name="DownloadDataNumber" @(_viewModel.DownloadDataNumber == true ? "checked" : null) />使用傳送企業發票對應資料
+                        <input type="checkbox" value="@($"{true}")" name="DownloadDataNumber" @(_viewModel.DownloadDataNumber == true ? "checked" : null) />使用傳送企業發票對應資料
                     </td>
                     <th>
                         上期發票空白號碼
                     </th>
                     <td>
-                        <input type="checkbox" value="@(true)" name="UploadBranchTrackBlank" @(_viewModel.UploadBranchTrackBlank == true ? "checked" : null) />用戶端自動下載
+                        <input type="checkbox" value="@($"{true}")" name="UploadBranchTrackBlank" @(_viewModel.UploadBranchTrackBlank == true ? "checked" : null) />用戶端自動下載
                     </td>
                 </tr>
                 <tr>
@@ -191,7 +191,7 @@
                         設定發票資料全列印
                     </th>
                     <td>
-                        <input type="checkbox" value="@(true)" name="PrintAll" @(_viewModel.PrintAll == true ? "checked" : null) />是
+                        <input type="checkbox" value="@($"{true}")" name="PrintAll" @(_viewModel.PrintAll == true ? "checked" : null) />是
                     </td>
                     <th>
                         <span style="color: red">*</span>設定發票類別
@@ -212,13 +212,13 @@
                         設定接收B2B發票(PDF檔)
                     </th>
                     <td>
-                        <input type="checkbox" value="@(true)" name="SubscribeB2BInvoicePDF" @(_viewModel.SubscribeB2BInvoicePDF == true ? "checked" : null) />是
+                        <input type="checkbox" value="@($"{true}")" name="SubscribeB2BInvoicePDF" @(_viewModel.SubscribeB2BInvoicePDF == true ? "checked" : null) />是
                     </td>
                     <th>
                         開立發票字軌號碼檢核
                     </th>
                     <td>
-                        <input type="checkbox" value="@(true)" name="EnableTrackCodeInvoiceNoValidation" @(_viewModel.EnableTrackCodeInvoiceNoValidation == true ? "checked" : null) />是
+                        <input type="checkbox" value="@($"{true}")" name="EnableTrackCodeInvoiceNoValidation" @(_viewModel.EnableTrackCodeInvoiceNoValidation == true ? "checked" : null) />是
                     </td>
                 </tr>
                 <tr>
@@ -226,7 +226,7 @@
                         設定使用委外客服
                     </th>
                     <td>
-                        <input type="checkbox" value="@(true)" name="SetToOutsourcingCS" @(_viewModel.SetToOutsourcingCS == true ? "checked" : null) />使用委外客服
+                        <input type="checkbox" value="@($"{true}")" name="SetToOutsourcingCS" @(_viewModel.SetToOutsourcingCS == true ? "checked" : null) />使用委外客服
                     </td>
                     @if (_model != null)
                     {
@@ -244,7 +244,7 @@
 
                                     $('<form method="post" id="myForm" enctype="multipart/form-data"></form>')
                                         .append(fileUpload).ajaxForm({
-                                            url: "@(Url.Action("UpdateLogo","Organization"))",
+                                            url: "@Html.Raw(Url.Action("UpdateLogo","Organization"))",
                                             data: { 'id': '@(_model.CompanyID)' },
                                             beforeSubmit: function () {
                                                 showLoading();
@@ -314,10 +314,10 @@
                         <input type="checkbox" value="@((int)Naming.InvoiceNoticeStatus.Issuing)" name="NoticeStatus" @(_viewModel.NoticeSetting.HasValue && ((_viewModel.NoticeSetting.Value & Naming.InvoiceNoticeStatus.Issuing) > 0) ? "checked" : null) />寄送開立通知
                     </td>
                     <th>
-                        中獎發票
+                        <input type="checkbox" value="@((int)Naming.InvoiceNoticeStatus.Winning)" name="NoticeStatus" @(_viewModel.NoticeSetting.HasValue && ((_viewModel.NoticeSetting.Value & Naming.InvoiceNoticeStatus.Winning) > 0) ? "checked" : null) />寄送中獎通知
                     </th>
                     <td>
-                        <input type="checkbox" value="@((int)Naming.InvoiceNoticeStatus.Winning)" name="NoticeStatus" @(_viewModel.NoticeSetting.HasValue && ((_viewModel.NoticeSetting.Value & Naming.InvoiceNoticeStatus.Winning) > 0) ? "checked" : null) />寄送中獎通知
+                        <input type="checkbox" value="@((int)Naming.InvoiceNoticeStatus.UseCBEStyle)" name="NoticeStatus" @(_viewModel.NoticeSetting.HasValue && ((_viewModel.NoticeSetting.Value & Naming.InvoiceNoticeStatus.UseCBEStyle) > 0) ? "checked" : null) />使用境外電商郵件樣式
                     </td>
                 </tr>
                 <tr>
@@ -353,11 +353,11 @@
                         簡訊通知
                     </th>
                     <td>
-                        <input type="checkbox" value="@(true)" name="SetToNotifyCounterpartBySMS" @(_viewModel.SetToNotifyCounterpartBySMS == true ? "checked" : null) />使用簡訊通知買受人
+                        <input type="checkbox" value="@($"{true}")" name="SetToNotifyCounterpartBySMS" @(_viewModel.SetToNotifyCounterpartBySMS == true ? "checked" : null) />使用簡訊通知買受人
                     </td>
                     <th>B2B發票開立通知以鏈結取代附件</th>
                     <td>
-                        <input type="checkbox" value="@(true)" name="UseB2BStandalone" @(_viewModel.UseB2BStandalone == true ? "checked" : null) />是
+                        <input type="checkbox" value="@($"{true}")" name="UseB2BStandalone" @(_viewModel.UseB2BStandalone == true ? "checked" : null) />是
                     </td>
                 </tr>
             </table>
