--- a/eIVOGo/Views/ProcessRequest/DataField/ResponsePath.cshtml
+++ b/eIVOGo/Views/ProcessRequest/DataField/ResponsePath.cshtml
@@ -40,7 +40,7 @@
         {
             if (File.Exists(item.ResponsePath))
             {
-                <a href="@(Url.Action("GetResource", "DataExchange", new { path = item.ResponsePath.EncryptData() }))">@(Path.GetFileName(item.ResponsePath))</a>
+                <a href="@Html.Raw(Url.Action("GetResource", "DataExchange", new { path = item.ResponsePath.EncryptData() }))">@(Path.GetFileName(item.ResponsePath))</a>
             }
             else
             {
