--- a/eIVOGo/Views/SiteAction/WaitForCheckMenu.cshtml
+++ b/eIVOGo/Views/SiteAction/WaitForCheckMenu.cshtml
@@ -7,7 +7,7 @@
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav" id="side-menu">
             <li>
-                <a href="@(Url.Action("EditMySelf","UserProfile",new { forCheck = true }))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>帳號管理</a>
+                <a href="@Html.Raw(Url.Action("EditMySelf","UserProfile",new { forCheck = true }))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>帳號管理</a>
             </li>
         </ul>
     </div>
